--- a/risorse.html
+++ b/risorse.html
@@ -141,7 +141,7 @@
             
             Qui potrai esplorare le <b>risorse</b> che abbiamo creato per orientare l'utente nel mondo della cultura sorda, proponendo anche attività che coinvologno la musica direttamente.
             <br><br>Per goderti la <b>MUSICA</b>, clicca sul relativo bottone.
-            <br>Per un primo appoccio allo studio della Lingua dei Segni Italiana, guarda i nostri <b>VDEOCORSI</b>.
+            <br>Per un primo appoccio allo studio della Lingua dei Segni Italiana, guarda i nostri <b>VIDEOCORSI</b>.
             <br>Per cercare corsi di musica per sordi nella tua città, esplora la sezione <b>CORSI DI MUSICA ESTERNI</b>.
             <br>Se vuoi iscriverti a un corso di LIS in una struttura o ente convenzionati, clicca su <b>IMPARA LA LIS</b>.</p>
 
